cambio en el vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,27 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "src/index.jsx",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "build/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/.*",
-        "dest": "src/server.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.jsx",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "src/*/",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/.*",
+      "dest": "src/server.js"
+    },
+    {
+      "src": "/(.*\\.(js|css|svg|png|jpg))",
+      "dest": "src/$1"
+    },
+    {
+      "src": "/.*",
+      "dest": "src/index.html"
+    }
+  ]
+}
